<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activity.ViewMemoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/modify" />

        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewContents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end" />

    <TextView
        android:id="@+id/textModification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>